fix: fix text align

--- a/src/components/TopSection/styles.scss
+++ b/src/components/TopSection/styles.scss
@@ -17,6 +17,7 @@
                 display: flex;
                 flex-direction: column;
                 border-radius: 4px;
+                text-align: center;
                 .title{
                     margin-top: 25px;
                     font-size: 12px;
